Fixed some font-sizing problems on Firefox

--- a/Apps/Search/public/stylesheets/style.css
+++ b/Apps/Search/public/stylesheets/style.css
@@ -143,7 +143,8 @@ h1 {
 	margin: 0 0 0 20px; 
 }
 .typeSelector {
-    font-size: 2.0em;
+    font-size: 16px;
+    margin: 5px;
 }
 .searchresults .result-type { 
 	text-transform: capitalize;
